@@ -1,3 +1,4 @@
+Added developer control that causes unstable nuclei to be animated
 > Improved highlighting in periodic table
 # 1.00.07 (45884) Nov 9, 2010
 11/9/10 Deploying to dev in order to test on Mac.
